<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_shadow_start_color">

    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/profilNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="20dp"
        android:text="Caroline"
        android:textColor="@color/colorWhite"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@id/imageDetail"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorBackgroundStar"
        android:src="@drawable/ic_star_border_white_24dp"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="@id/imageDetail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageDetail" />

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        android:background="@android:color/transparent"
        android:tint="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageDetail" />

    <!--Cardview 01 -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:cardCornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/imageDetail"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstNameDetail"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="Caroline"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/addressNumberDetail"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="8dp"

                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorAccent"
                android:text="Son adresse" />


            <TextView
                android:id="@+id/phoneNumberDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorAccent"
                android:text="Son numéro de téléphone" />

            <TextView
                android:id="@+id/urlDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_baseline_language_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorAccent"
                android:text="Le lien de son site web" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- Cardview 02 -->

    <android.support.v7.widget.CardView
        app:layout_constraintTop_toBottomOf="@id/cardView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin ="10dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="A propos de moi"

                android:textColor="@color/colorBlack"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/aProposDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="description" />
        </LinearLayout>

    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>




